added voice selection functionality

--- a/index.html
+++ b/index.html
@@ -18,5 +18,23 @@
         <button id="button">Tell me a joke!</button>
         <audio id="audio" controls hidden></audio>
     </div>
+    <div class="settings">
+        <div class="language-selection">
+            <label for="lang">Accent:</label>
+            <select name="lang" id="lang">
+                <option value="en-au">Australian</option>
+                <option value="en-ca">Canadian</option>
+                <option value="en-gb">British</option>
+                <option value="en-in">Indian</option>
+                <option value="en-ie">Irish</option>
+                <option value="en-us">American</option>
+            </select>
+            <button id="voiceBtn">Get Voices</button> 
+            <select name="voice" id="voice">
+                <option value="Choose">Choose Language to Load Voices</option>
+            </select>
+            <button id="testBtn">Test</button>
+        </div>
+    </div>
 </body>
 </html>
